# ota-for-aws-iot-embedded-sdk

./: README.md  otaFilePaths.cmake
awsOtaLib/: CMakeLists.txt
